<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/astro_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/top_margin_double"
    android:background="@color/main_white"
    android:orientation="vertical"
    android:paddingTop="@dimen/top_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/main_orange"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/today_is"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:text="@string/astro"
            android:textColor="@color/main_white"
            android:textSize="@dimen/text_size_title" />

        <TextView
            android:id="@+id/which_astro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/xxastro"
            android:textColor="@color/main_white"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/choose_astro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:text="@string/luck"
            android:textColor="@color/main_white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/main_orange"
        android:orientation="vertical"
        android:padding="@dimen/top_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/main_white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"

                android:text="@string/zonghe_yun"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/zongheyun_x_xing"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/text_size_50" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/xing"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="@dimen/top_margin"
                android:layout_height="match_parent"
                android:background="@color/main_orange" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/shiye_yun"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/shiyeyun_x_xing"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/text_size_50" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/xing"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_weight="1"
            android:background="@color/main_white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/aiqing_yun"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/aiqing_x_xing"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/text_size_50" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/xing"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="@dimen/top_margin"
                android:layout_height="match_parent"
                android:background="@color/main_orange" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/caifu_yun"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/caifuyun_x_xing"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/text_size_50" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/xing"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>